Alterações feitas na data 30/11

--- a/ProjetoIntegrador/9-Esqueceusenha.html
+++ b/ProjetoIntegrador/9-Esqueceusenha.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JS/cliente.js"></script>
   </head>
-  <body>
+  <body id="body-9">
     <header>
       <a href="1-login.html"
         ><img
-          src="img/logo-sem-fundo.png"
+          src="logo.png"
           alt="Logo da empresa RangoTop"
-          style="height: 200px"
+          style="height: 300px"
       /></a>
     </header>
     <a href="1-login.html"></a>
@@ -26,7 +26,7 @@
         </h3>
         <form method="post" onsubmit="sucesso(); return false;">
           <div class="email-esqueceu">
-            <label for="email">Email</label>
+            <label for="email" class="subtitle">Email</label>
             <input
               required
               type="email"
@@ -40,7 +40,7 @@
           </button>
           <div class="row1">
           <a href="1-login.html">
-            <p>Voltar</p>
+            <p class="submit1">Voltar</p>
           </a>
         </div>
         </form>
