--- a/ProjetoIntegrador/termos.html
+++ b/ProjetoIntegrador/termos.html
@@ -18,8 +18,17 @@
     <link rel="stylesheet" href="CSS/lucas.css">
     <title>Top Burguer :: Termos de uso</title>
     <style>
+        .nav-top {
+            background: rgb(237, 183, 33) !important;
+            background: linear-gradient(180deg, rgba(237, 183, 33, 0.3981793400954131) 0%, rgba(255, 255, 255, 1) 100%) !important;
+            color: rgb(0, 0, 0) !important;
+        }
+
         body {
             min-width: 372px;
+            background: rgb(237, 183, 33);
+            background: linear-gradient(0deg, rgba(237, 183, 33, 0.5466387238489145) 0%, rgba(255, 255, 255, 1) 100%);
+            font-size: 14pt;
         }
 
         .wrapper {
@@ -30,9 +39,9 @@
 
 <body>
     <div class="d-flex flex-column wrapper">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark nav-top mb-3">
             <div class="container">
-                <a class="navbar-brand" href="loja.html">
+                <a class="navbar-brand text-dark" href="loja.html">
                     <strong>Top Burguer</strong>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,25 +51,25 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="/index.html">Principal</a>
+                            <a class="nav-link active text-dark" href="/index.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
+                            <a class="nav-link text-dark" href="contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/cadastro.html" class="nav-link text-white">Quero Me Cadastrar</a>
+                                <a href="/cadastro.html" class="nav-link text-dark">Quero Me Cadastrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/login.html" class="nav-link text-white">Entrar</a>
+                                <a href="/login.html" class="nav-link text-dark">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0">
                                     <small>2</small>
                                 </span>
-                                <a href="/carrinho.html" class="nav-link text-white">
+                                <a href="/carrinho.html" class="nav-link text-dark">
                                     <i class="bi-cart" style="font-size:24px;"></i>
                                 </a>
                             </li>
