Alterado a tela de configuração

--- a/ProjetoIntegrador/5-configuracao.html
+++ b/ProjetoIntegrador/5-configuracao.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="1-login.html"><img src="img/logo-sem-fundo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
+        <a href="1-login.html"><img src="/logo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
     </header>
     <h1 class=" d-flex align-self-center justify-content-center">Configuração da conta</h1>
         <div class="div-foto-perfil  d-flex align-self-center justify-content-center">
@@ -96,7 +96,7 @@
                                 required
                                 minlength="3"
                               />
-                                <label> Data de expiração:</label>
+                                <label>Expiração:</label> 
                                 <select>
                                     <option value='01'>Janeiro</option>
                                     <option value='02'>Fevereiro</option>
