Mais alterações feitas

--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -15,9 +15,9 @@
 
 
   <title>Rango TOP (feed/principal)</title>
-  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/estilo_feed.css">
-  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/estilo1.css">
-  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/formatacao.css">
+  <link rel="stylesheet" href="CSS/estilo_feed.css">
+  <link rel="stylesheet" href="CSS/estilo1.css">
+  <link rel="stylesheet" href="CSS/formatacao.css">
   <style>
     body{
       overflow: hidden !important;
@@ -31,7 +31,10 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light mb-3 nav-top ">
         <div class="container">
-            <a class="navbar-brand" href="postagem.html" target="_blank"><img src="/ProjetoIntegrador/logo.png" style=" max-width:200px;max-height:150px"></a>
+          <!-- <div class="img-size">
+            <a class="navbar-brand" href="/6-feed.html" ><img src="/logo.png" style="height: 150px;
+              width: 150px;"></a>
+          </div> -->
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
