Descrição dos itens na loja add, retirada coração de favorito nas imagens

--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -73,54 +73,6 @@
                 </div>
             </div>
         </nav>
-
-        <!--É preciso criar um banner para poder utilizar aqui-->
-        <!-- <div class="container">
-                 <div id="carouselMain" class="carousel slide carousel-dark" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button
-                            type="button"
-                            data-bs-target="#carouselMain"
-                            data-bs-slide-to="0"
-                            class="active"
-                        ></button>
-                        <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="1"></button>
-                        <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="2"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="3000">
-                            <img src="/img/hotdog.png" class="d-none d-md-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="/img/x-bacon.png" class="d-none d-md-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="/img/x-costela.png" class="d-none d-md-block w-100" alt="">
-                        </div>
-                    </div>
-                    <button
-                        class="carousel-control-prev"
-                        type="button"
-                        data-bs-target="#carouselMain"
-                        data-bs-slide="prev"
-                    >
-                        <span class="carousel-control-prev-icon"></span>
-                        <span class="visually-hidden">Anterior</span>
-                    </button>
-                    <button
-                        class="carousel-control-next"
-                        type="button"
-                        data-bs-target="#carouselMain"
-                        data-bs-slide="next"
-                    >
-                        <span class="carousel-control-next-icon"></span>
-                        <span class="visually-hidden">Próximo</span>
-                    </button>
-                </div>
-                <hr class="mt-3">
-            </div> -->
-
-
         <main class="flex-fill">
             <div class="container">
                 <div class="row">
@@ -172,9 +124,7 @@
                 <div class="row g-3">
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <a href="#" class="position-absolute end-0 p-2 text-danger">
-                                <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
-                            </a>
+
                             <img src="/ProjetoIntegrador/img/Lanches/chedar-bacon.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
@@ -182,7 +132,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Chedar Bacon</h5>
                                 <p class="card-text truncar-3l">
-                                    <!--Criar uma descrição adequada-->
+                                    Queijo chedar derretido com bacon crocante
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -194,9 +144,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <a href="#" class="position-absolute end-0 p-2 text-danger">
-                                <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
-                            </a>
+
                             <img src="/ProjetoIntegrador/img/Lanches/hamburguer.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 12,50
@@ -204,8 +152,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">hamburguer</h5>
                                 <p class="card-text truncar-3l">
-                                    <!--Criar uma descrição adequada-->
-
+                                    Tradicional hamburguer com muito queijo
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -217,9 +164,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <a href="#" class="position-absolute end-0 p-2 text-danger">
-                                <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
-                            </a>
+
                             <img src="/ProjetoIntegrador/img/Lanches/hotdog.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 12,50
@@ -227,8 +172,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Hot Dog</h5>
                                 <p class="card-text truncar-3l">
-                                    <!--Criar uma descrição adequada-->
-
+                                    Tradicional HotDog com Salsicha alemã ao molho barbecue
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -243,9 +187,6 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <a href="#" class="position-absolute end-0 p-2 text-danger">
-                                <i class="bi-suit-heart-fill" style="font-size: 24px; line-height: 24px;"></i>
-                            </a>
                             <img src="/ProjetoIntegrador/img/Lanches/x-bacon.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
@@ -253,7 +194,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">X-bacon</h5>
                                 <p class="card-text truncar-3l">
-                                    <!--Criar uma descrição adequada-->
+                                    Bacon defumado assado de forma lenta com cebola cristalizada
 
                                 </p>
                             </div>
@@ -266,9 +207,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <a href="#" class="position-absolute end-0 p-2 text-danger">
-                                <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
-                            </a>
+
                             <a href="/ProjetoIntegrador/produto.html">
                                 <img src="/ProjetoIntegrador/img/Lanches/x-costela.png" class="card-img-top">
                             </a>
@@ -279,8 +218,6 @@
                                 <h5 class="card-title">X-costela</h5>
                                 <p class="card-text truncar-3l">
                                     Costela defumada e assada lentamente com molho barbcue
-                                    <!--Criar uma descrição adequada-->
-
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -292,9 +229,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <a href="#" class="position-absolute end-0 p-2 text-danger">
-                                <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
-                            </a>
+
                             <img src="/ProjetoIntegrador/img/Lanches/x-queijo.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
