Alterção na legenda da Pizza, na tela feed.

--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -123,8 +123,7 @@
                 <img src="./imagens/ft2.jpg" class="card-img-top" style="width: 100%; height: 500px;" alt="...">
                 #Pizza_Pao_De_Alho
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;">Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla,
-                Bla... </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;"> A melhor parte do churrasco, agora na pizza 😋 </p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
