Aletração das legendas, na tela feed.

--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -150,8 +150,7 @@
                 <img src="./imagens/ft4.jpg" class="card-img-top" style="width: 100%; height: 500px;" alt="...">
                 #Pudim
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;">Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla,
-                Bla... </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;">E o melhor segue invicto <b>#D-Oráculo</b></p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
@@ -180,8 +179,7 @@
                 <img src="./imagens/ft5.jpg" class="card-img-top" style="width: 100%; height: 500px;" alt="...">
                 #Burguer
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;">Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla,
-                Bla... </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;"> O de hoje ta mais que pago <b>#RangoTop</b> </p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
@@ -208,8 +206,7 @@
                 <img src="./imagens/ft6.jpg" class="card-img-top" style="width: 100%; height: 500px; " alt="...">
                 #Petit_Gateau
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;">Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla,
-                Bla... </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;"> Na conta da empresa é mais saboroso 😜 </p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
@@ -237,8 +234,7 @@
                 <img src="./imagens/ft8.jpg" class="card-img-top" style="width: 100%; height: 500px; " alt="...">
                 #Torresmao_Top
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;">Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla,
-                Bla... </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;"> O que a <b>#nutri</b> não vê a <b>#balança</b> não sente 😸  </p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
@@ -266,8 +262,7 @@
                 <img src="./imagens/ft7.jpg" class="card-img-top" style="width: 100%; height: 500px;" alt="...">
                 #Choppim_de_Levis
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;">Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla, Bla,
-                Bla... </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;"> <b>#SEXTOU_FAMILIA</b> encerramento do <b>#ProjetoInterdisciplinar</b> da melhor maneira 🤘🍻 </p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
