--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -125,7 +125,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="/ProjetoIntegrador/img/Lanches/chedar-bacon.png" class="card-img-top">
+                            <img src="img/Lanches/chedar-bacon.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
                             </div>
@@ -145,7 +145,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="/ProjetoIntegrador/img/Lanches/hamburguer.png" class="card-img-top">
+                            <img src="img/Lanches/hamburguer.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 12,50
                             </div>
@@ -165,7 +165,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="/ProjetoIntegrador/img/Lanches/hotdog.png" class="card-img-top">
+                            <img src="img/Lanches/hotdog.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 12,50
                             </div>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <img src="/ProjetoIntegrador/img/Lanches/x-bacon.png" class="card-img-top">
+                            <img src="img/Lanches/x-bacon.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
                             </div>
@@ -209,7 +209,7 @@
                         <div class="card text-center bg-light">
 
                             <a href="/ProjetoIntegrador/produto.html">
-                                <img src="/ProjetoIntegrador/img/Lanches/x-costela.png" class="card-img-top">
+                                <img src="img/Lanches/x-costela.png" class="card-img-top">
                             </a>
                             <div class="card-header">
                                 R$ 16,50
@@ -230,7 +230,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="/ProjetoIntegrador/img/Lanches/x-queijo.png" class="card-img-top">
+                            <img src="img/Lanches/x-queijo.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
                             </div>
@@ -323,7 +323,7 @@
             </div>
         </footer>
     </div>
-    <script src="/ProjetoIntegrador/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
