--- a/ProjetoIntegrador/3-carrinho.html
+++ b/ProjetoIntegrador/3-carrinho.html
@@ -11,7 +11,7 @@
 
     <title>Carrinho</title>
   </head>
-  <body>
+  <body onload="produtosIniciais()">
     <form method="post" onsubmit="sucesso(); return false;">
     <div class="container">
       <div id="produtosX" class="row">
