--- a/ProjetoIntegrador/produto.html
+++ b/ProjetoIntegrador/produto.html
@@ -13,8 +13,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Top Burguer :: Produto</title>
     <style>
         .nav-top {
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="row g-3">
                     <div class="col-12 col-sm-6">
-                        <img src="/ProjetoIntegrador/img/Lanches/x-costela.png" class="img-thumbnail" id="imgProduto">
+                        <img src="img/Lanches/x-costela.png" class="img-thumbnail" id="imgProduto">
                     </div>
                     <div class="col-12 col-sm-6">
                         <h1>X-costela</h1>
@@ -132,7 +132,7 @@
             </div>
         </footer>
     </div>
-    <script src="/ProjetoIntegrador/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
