--- a/ProjetoIntegrador/7-perfil.html
+++ b/ProjetoIntegrador/7-perfil.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light mb-3 nav-top ">
             <div class="container">
-                <a class="navbar-brand" href="postagem.html" target="_blank"><img src="/ProjetoIntegrador/logo.png" style=" max-width:200px;max-height:150px"></a>
+                <a class="navbar-brand" href="postagem.html" target="_blank"><img src="logo.png" style=" max-width:200px;max-height:150px"></a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -185,7 +185,7 @@
     </main>
 
 
-
+    <!--
     <script type="text/javascript">
 
         var crl = document.getElementById('myCrl').getContext('2d');
@@ -219,7 +219,7 @@
         crl2.stroke();
 
     </script>
-
+ -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
