link entre as páginas

--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -55,16 +55,16 @@
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/cadastro.html" class="nav-link ">Quero Me Cadastrar</a>
+                                <a href="2-CNPJ-CPF.html" class="nav-link ">Entrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/login.html" class="nav-link ">Entrar</a>
+                                <a href="2-CNPJ-CPF.html" class="nav-link ">Cadastrar-se</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0">
                                     <small>2</small>
                                 </span>
-                                <a href="/carrinho.html" class="nav-link ">
+                                <a href="3-carrinho.html" class="nav-link ">
                                     <i class="bi-cart" style="font-size:24px;"></i>
                                 </a>
                             </li>
@@ -136,7 +136,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
+                                <a href="produto.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
                                 </a>
                             </div>
@@ -156,7 +156,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
+                                <a href="produto.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
                                 </a>
                             </div>
@@ -199,7 +199,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
+                                <a href="produto.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
                                 </a>
                             </div>
@@ -208,7 +208,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <a href="/ProjetoIntegrador/produto.html">
+                            <a href="produto.html">
                                 <img src="img/Lanches/x-costela.png" class="card-img-top">
                             </a>
                             <div class="card-header">
@@ -221,7 +221,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
+                                <a href="produto.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
                                 </a>
                             </div>
@@ -242,7 +242,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
+                                <a href="produto.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
                                 </a>
                             </div>
