--- a/ProjetoIntegrador/produto.html
+++ b/ProjetoIntegrador/produto.html
@@ -84,7 +84,7 @@
                         <img src="img/Lanches/x-costela.png" class="img-thumbnail" id="imgProduto">
                     </div>
                     <div class="col-12 col-sm-6">
-                        <h1>X-costela</h1>
+                        <h1>X-tudo</h1>
                         <p>
                             Quis officia irure deserunt reprehenderit sunt non ut amet. Sunt veniam cillum aliqua. Elit
                             labore duis laboris reprehenderit laborum magna velit dolor veniam sint.
@@ -97,9 +97,11 @@
                             elit officia. Anim duis ullamco cillum nulla voluptate dolore velit ad Lorem adipisicing.
                         </p>
                         <p>
-                            <button class="btn btn-lg btn-outline-danger mb-3 mb-xl-0 me-2">
-                                <i class="bi-cart"></i> Adicionar ao Carrinho
-                            </button>
+                            <a href="3-carrinho.html">
+                                <button class="btn btn-lg btn-outline-danger mb-3 mb-xl-0 me-2">
+                                    <i class="bi-cart"></i> Adicionar ao Carrinho
+                                </button>
+                            </a>
 
                         </p>
                     </div>
