--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -52,23 +52,23 @@
                             </form>
                         </li>
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="/ProjetoIntegrador/6-feed.html" style="text-decoration: none; color: red;">
+                            <a href="6-feed.html" style="text-decoration: none; color: red;">
                                 <i class="bi bi-house-door icons"></i></a>
                         </li>
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="/ProjetoIntegrador/loja.html" style="text-decoration: none; color: rgb(0, 0, 0);">
+                            <a href="loja.html" style="text-decoration: none; color: rgb(0, 0, 0);">
                                 <i class="bi bi-shop icons"></i></a>
                         </li>
                         
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="./feed1.html" style="text-decoration: none; color: red;">
+                            <a href="#" style="text-decoration: none; color: red;">
                                 <i class="bi bi-camera icons"></i></a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a href="./config.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
+                            <a href="5-configuracao.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a href="./config.html" style="text-decoration: none; color: red; padding: 5px 5px;">
+                            <a href="#" style="text-decoration: none; color: red; padding: 5px 5px;">
                                 <i class="bi bi-chat-dots icons"></i></a>
 
                         </li>
@@ -282,7 +282,7 @@
     <footer>
 
     
-      <a href="./feed1.html"><svg aria-label="Página inicial" class="_ab6-" color="red" fill="red" height="24"
+      <a href="#"><svg aria-label="Página inicial" class="_ab6-" color="red" fill="red" height="24"
           role="img" viewBox="0 0 24 24" width="24">
           <path
             d="M22 23h-6.001a1 1 0 0 1-1-1v-5.455a2.997 2.997 0 1 0-5.993 0V22a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V11.543a1.002 1.002 0 0 1 .31-.724l10-9.543a1.001 1.001 0 0 1 1.38 0l10 9.543a1.002 1.002 0 0 1 .31.724V22a1 1 0 0 1-1 1Z">
@@ -297,7 +297,7 @@
           d="M17.79 10.132a.659.659 0 0 0-.962-.873l-2.556 2.05a.63.63 0 0 1-.758.002L11.06 9.47a1.576 1.576 0 0 0-2.277.42l-2.567 3.98a.659.659 0 0 0 .961.875l2.556-2.049a.63.63 0 0 1 .759-.002l2.452 1.84a1.576 1.576 0 0 0 2.278-.42Z"
           fill-rule="evenodd"></path>
       </svg>
-      <a href="./postagem.html"><svg color="red" aria-label="Nova publicação" class="_ab6-" color="#262626"
+      <a href="#"><svg color="red" aria-label="Nova publicação" class="_ab6-" color="#262626"
           fill="#262626" height="24" role="img" viewBox="0 0 24 24" width="24">
           <path
             d="M2 12v3.45c0 2.849.698 4.005 1.606 4.944.94.909 2.098 1.608 4.946 1.608h6.896c2.848 0 4.006-.7 4.946-1.608C21.302 19.455 22 18.3 22 15.45V8.552c0-2.849-.698-4.006-1.606-4.945C19.454 2.7 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.547 2 5.703 2 8.552Z"
@@ -307,7 +307,7 @@
           <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             x1="12.003" x2="12.003" y1="6.545" y2="17.455"></line>
         </svg></a>
-      <a href="/ProjetoIntegrador/7-perfil.html"><img class="img-nav" src="imagens/perfil.jpeg" style="width: 60px;"></a>
+      <a href="7-perfil.html"><img class="img-nav" src="imagens/perfil.jpeg" style="width: 60px;"></a>
 
     </footer>
   </div>
