--- a/ProjetoIntegrador/7-perfil.html
+++ b/ProjetoIntegrador/7-perfil.html
@@ -31,23 +31,23 @@
                                 </form>
                             </li>
                             <li class="nav-item" style="padding: 5px 5px;">
-                                <a href="/ProjetoIntegrador/6-feed.html" style="text-decoration: none; color: red;">
+                                <a href="6-feed.html" style="text-decoration: none; color: red;">
                                     <i class="bi bi-house-door icons"></i></a>
                             </li>
                             <li class="nav-item" style="padding: 5px 5px;">
-                                <a href="/ProjetoIntegrador/loja.html" style="text-decoration: none; color: rgb(0, 0, 0);">
+                                <a href="loja.html" style="text-decoration: none; color: rgb(0, 0, 0);">
                                     <i class="bi bi-shop icons"></i></a>
                             </li>
                             
                             <li class="nav-item" style="padding: 5px 5px;">
-                                <a href="./feed1.html" style="text-decoration: none; color: red;">
+                                <a href="#" style="text-decoration: none; color: red;">
                                     <i class="bi bi-camera icons"></i></a>
                             </li>
                             <li class="nav-item mt-1">
-                                <a href="./config.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
+                                <a href="5-configuracao.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px;"><i class="bi bi-gear icons"></i></a>
                             </li>
                             <li class="nav-item mt-1">
-                                <a href="./config.html" style="text-decoration: none; color: red; padding: 5px 5px;">
+                                <a href="#" style="text-decoration: none; color: red; padding: 5px;">
                                     <i class="bi bi-chat-dots icons"></i></a>
 
                             </li>
@@ -76,7 +76,7 @@
                                     <div class="col-8 col-lg-6">
                                         <h2 class="username">zequinha_123</h2>
                                     </div>
-                                    <div class="col col-lg-5"><button type="button" class="btn btn-outline-secondary button-edit"><a href="./editar.html" style="text-decoration: none; color: white;"> Editar
+                                    <div class="col col-lg-5"><button type="button" class="btn btn-outline-secondary button-edit"><a href="#" style="text-decoration: none; color: white;"> Editar
                                                 perfil</a></button></div>
                                 </div>
                                 <div class="row">
